# ale-pal

./: .dockerignore  Dockerfile  README.md
.github/workflows/: build-push.yaml
api/: .gitignore  Cargo.toml  README.md  seed.sql
api/migrations/: 01_initial_tables.sql  02_fts_table.sql
api/src/: api.rs  db.rs  main.rs  types.rs  util.rs
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
ui/public/: manifest.json
ui/src/: App.svelte  Home.svelte  List.svelte  Modal.svelte  Navbar.svelte  Router.svelte  Settings.svelte  Toast.svelte  main.ts  modal.svelte.ts  routing.svelte.ts  search.svelte.ts  toast.svelte.ts  utils.ts
ui/src/api/: client.ts  rspc.ts
