[package]
name = "ale-pal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlite"] }

tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.7"
axum-macros = "0.4.2"
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }

rspc = "0.2.0"
rspc-axum = { version = "0.1.1", features = ["ws"] }
specta = "1.0.5"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.5.20", features = ["derive"] }
